--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 		<div id="card-inside">
 			<div class="wrap">
 				<center><p class="animated infinite wobble"><b><u>Happy Birthday!</b></u></p><center>
-				<p> Happy 🎂 may your bday n life goes well 😊&nbsp;<i class="em-svg em-blush"></i></p>
-				<p>You'll not come to know who i am 😁
+				<p> Happy Bday 🎂 😊&nbsp;<i class="em-svg em-blush"></i></p>
+				<p>
 				 </p><p class="signed"><u>Made With </b><b> <i class="em-svg em-heart"></i></p>
 			</div>
 		</div>
 		<div id="card-front">
 			<div class="wrap">
-				<h1 class="animated infinite swing">Happy Birthday Love</h1>
+				<h1 class="animated infinite swing">Happy Birthday 🎂 </h1>
 				<div class="cake_and_velas">
 					<div class="velas">
 						<div class="fuego"></div>
