--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<div class="card-front_inside">
 				<br> <br> <br>
 				<div class="polaroid">
-					<div class="img" style="background-image: url('https://static.vecteezy.com/system/resources/previews/000/608/881/original/heart-flat-icon-vector.jpg')"></div>
+					<div class="img" style="background-image: url('https://drive.google.com/file/d/1NC4BSyh5ZzC1rprxqMfwk9NrIyjL5XmY/view?usp=sharing')"></div>
 				</div>
 				<div class="shadow"></div>
 			</div>
